2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Projects/NewProjectDialog.cs: Added new
	  GetDefaultTargetPlatform virtual to DotNetProject. It is
	  overriden in DotNetAssemblyProject to set the default
	  configuration for exes (x86).

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs:
	  If a folder can't be deleted, show the error and just remove
	  it from the project. Added support for 'apply to all' in the
	  confirmation dialog.

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Don't dispose the
	  command manager until we know for sure that we are exiting.
	  Should fix bug #605393 - Error while building code.

2010-05-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Navigation/HistoryList.cs:
	* MonoDevelop.Ide.Navigation/NavigationPoint.cs:
	* MonoDevelop.Ide.Navigation/NavigationHistoryItem.cs:
	  Improved handling of disposal of navigation points. Avoid
	  creating event handlers.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Navigation/NavigationHistoryItem.cs:
	  Intercept dispose event and change the sender so the
	  HistoryList doesn't explode.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Change 'Browse Next/Previous'
	  command names to 'Show Next/Previous' to match the name that
	  the search and error pads set.

2010-05-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: (Revert revision 157026)

2010-05-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Navigation:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Tasks/TaskStore.cs:
	* MonoDevelop.Ide.Gui.Content/INavigable.cs:
	* MonoDevelop.Ide.Gui.Content/ILocationList.cs:
	* MonoDevelop.Ide.Commands/NavigationCommands.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs: